--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
     display: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
     .desktop {
         display: initial;
     }
@@ -51,4 +51,56 @@ header nav.center {
 
 header nav.right {
     text-align: right;
+}
+
+/* Estilos de secciones */
+section {
+    height: 100vh;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
+section .content {
+    width: 100%;
+    height: 100vh;
+    padding-top: 15vh;
+    padding-bottom: 15vh;
+    text-align: center;
+    display: grid;
+    grid-template-rows: min-content auto min-content;
+}
+section h1 {
+    font-size: 3rem;
+}
+section a {
+    color: inherit;
+}
+section .buttons a {
+    display: block;
+    background-color: #eee;
+    color: inherit;
+    padding: 20px 50px;
+    border-radius: 25px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight:500;
+}
+section .buttons a:first-child {
+    background-color: #444;
+    color: #fff;
+}
+section .buttons {
+    display: grid;
+    row-gap: 20px;
+    margin: 0 40px;
+}
+@media(min-width: 768px){
+    section .buttons {
+        max-width: 640px;
+        margin: 0 auto;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 20px;
+    } 
 }
