--- a/styles.css
+++ b/styles.css
@@ -104,3 +104,50 @@ section .buttons {
         column-gap: 20px;
     } 
 }
+
+aside {
+    position: fixed;
+    right: 0;
+    transition: right .4s ease;
+    right: -320px;
+    width: 320px;
+    background-color: #fff;
+    padding: 80px 40px;
+    z-index: 4;
+    height: 100vh;
+}
+aside.active {
+    right: 0;
+}
+aside a {
+    display: block;
+    color : inherit;
+    text-decoration: none;
+    padding: 12px 0;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+aside button.close {
+    font-size: 24px;
+    border: 0;
+    background-color: transparent;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 10px;
+    font-family: sans-serif;
+    font-weight:100;
+    cursor: pointer;
+}
+
+.backdrop {
+    display: none;
+    position: fixed;
+    inset: 0;
+    background-color: rgba(0, 0, 0, .35);
+    backdrop-filter: blur(5px);
+}
+.backdrop.active {
+    display: block;
+}
